--- a/Pope_Steven_OOP_Review/css/main.css
+++ b/Pope_Steven_OOP_Review/css/main.css
@@ -1,5 +1,30 @@
-/* form {
+#heroInfo {
     display: flex;
     flex-direction: column;
-    background-color: red;
-} */
+    align-content: center;
+    border: 1px solid black;
+    background: #FBFBFF;
+    margin-top: 2%;
+    padding: 2%;
+    margin-bottom: 2%;
+}
+#heroInfo h3{
+    text-align: center;
+}
+header h1{
+    text-align: center;
+    margin-bottom: 2%;
+}
+button{
+    margin-top: 4%;
+}
+body{
+    background:url("../images/caShield.jpeg") fixed;
+    font-size: 1.25em;
+    font-family: fantasy;
+}
+#container {
+    background: #FBFBFF;
+    margin-top: 2%;
+    padding: 2%;
+}
